# sdk-python

./: .buildinfo  .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  Jenkinsfile2  Makefile  README.md  addon.html  ambrasdk.spec  async.html  conftest.py  example.secrets.toml  faq.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  release.py  search.html  searchindex.js  service_api.html  setup.cfg  storage_api.html  tox.ini
.doctrees/: addon.doctree  async.doctree  environment.pickle  faq.doctree  index.doctree  installation.doctree  quickstart.doctree  service_api.doctree  storage_api.doctree
.doctrees/referencies/: addon.doctree  api.doctree  index.doctree  models.doctree  service_api.doctree  storage_api.doctree
_modules/: index.html
_sources/: addon.rst.txt  async.rst.txt  faq.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  service_api.rst.txt  storage_api.rst.txt
_sources/referencies/: api.rst.txt  index.rst.txt  models.rst.txt  service_api.rst.txt  storage_api.rst.txt
_static/: documentation_options.js
ambra_sdk/: __init__.py  api.py  async_context_manager.py  clear_params.py  deprecated.py  pythonize.py  request_args.py  types.py
ambra_sdk/addon/: addon.py  dicom.py  job.py  study.py
ambra_sdk/api/: __init__.py  api.py  async_api.py  base_api.py
ambra_sdk/async_addon/: addon.py  dicom.py  job.py  study.py
ambra_sdk/exceptions/: base.py  service.py  storage.py
ambra_sdk/models/: __init__.py  base.py  fields.py  generated.py  models.py
ambra_sdk/service/: filtering.py  only.py  query.py  response.py  sorting.py  ws.py
ambra_sdk/storage/: bool_to_int.py  image.py  request.py  response.py  storage.py  study.py
docs/source/: addon.rst  conf.py  index.rst  installation.rst  quickstart.rst  service_api.rst  spelling_wordlist.txt  storage_api.rst
parser/: api.html  api_old.html  dictionary.html  dictionary_old.html  models.py  parse_api.py  parse_api_and_generate.py  parse_errors.py  parse_models.py  parse_request.py  parse_response.py  schema.csv  storage_api.html
parser/templates/: models  namespace  namespaces_init  user_namespace
referencies/: addon.html  api.html  index.html  models.html  service_api.html  storage_api.html
tests/: conftest.py  test_ambra.py  test_api.py  test_request_args.py
tests/addon/: test_addon_dicom.py  test_addon_study.py  test_async_addon_dicom.py  test_async_addon_study.py
tests/api/: test_api.py  test_async_api.py  test_rate_limits.py
tests/fixtures/: account.py  async_account.py  async_study.py  customfield.py  study.py  ws.py
tests/models/: test_base.py  test_generated.py  test_models_study.py
tests/service/: test_account.py  test_custom_code.py  test_filtering.py  test_group.py  test_only.py  test_service_errors.py  test_session.py  test_study.py  test_user.py  (+1 more)
(+163 files in other folders)
