[tool.poetry]
name = "ambra-sdk"
version = "3.20.3.0-5"
description = "Ambrahealth python SDK"
authors = [
	"Ambrahealth AI team <python-sdk@ambrahealth.com>",
]
maintainers = [
	"Alexander Kapustin <akapustin@ambrahealth.com>",
]
readme = "README.md"
license = 'Apache-2.0'

# pypi url
homepage = 'https://github.com/dicomgrid/sdk-python'
repository = 'https://github.com/dicomgrid/sdk-python'
documentation = 'https://dicomgrid.github.io/sdk-python/index.html'

keywords = ['ambrahealth', 'ambra']

classifiers = [
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
bump_release_candidate = "release:bump_release_candidate"
start_release = "release:start_release"
bump_release = "release:bump_release"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
aiohttp = "^3.6.2"
# TODO update python-box when dynaconf released.
# https://github.com/rochacbruno/dynaconf/commit/3711d7e0643a829ac5acbc9c7db885f44af16840
python-box = "<4.0.0"
pydicom = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.761"
pytest-cov = "^2.8.1"
wemake-python-styleguide = "^0.13.4"
dynaconf = "^2.2.2"
beautifulsoup4 = "^4.8.2"
jinja2 = "^2.11.1"
requests-mock = "^1.7.0"
sphinx = "^2.4.4"
tox = "^3.14.5"
tomlkit = "^0.5.11"
gitpython = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
